force-app/main/default/objects/Account/fields/Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter name of Marketing Promotion that resulted in this VIP Account being created.</inlineHelpText>
    <label>Marketing Activity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Marketing_Activity__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partnership Promotion</value>
        </filterItems>
        <filterItems>
            <field>Marketing_Activity__c.Is_Live__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Marketing_Activity__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>