force-app/main/default/objects/Account/fields/Marketing_Captain__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Captain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Captain</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>