force-app/main/default/objects/Account/fields/Marketing_Consent_Email__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to send marketing information by email</description>
    <inlineHelpText>Consent to send marketing information by email</inlineHelpText>
    <label>Old Marketing Consent Email</label>
    <type>Checkbox</type>
</CustomField>