force-app/main/default/objects/Account/fields/Marketing_Consent_Given__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Consent Given</label>
    <type>Checkbox</type>
</CustomField>