force-app/main/default/objects/Account/fields/Marketing_Consent_Holding__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent_Holding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the guest has provided offsite consent, and will give onsite consent later</description>
    <inlineHelpText>Private Client has provided offline consent to hold data, and we should secure onsite consent on their next visit</inlineHelpText>
    <label>Marketing Consent Holding</label>
    <type>Checkbox</type>
</CustomField>