force-app/main/default/objects/Account/fields/Marketing_Consent_Holding_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent_Holding_Date__c</fullName>
    <description>The date that the guest has provided holding consent</description>
    <inlineHelpText>Date Private Client gave offline consent to hold data</inlineHelpText>
    <label>Marketing Consent Holding Date</label>
    <type>DateTime</type>
</CustomField>