force-app/main/default/objects/Account/fields/Marketing_Consent_Phone__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to send marketing information by phone</description>
    <inlineHelpText>Consent to send marketing information by phone</inlineHelpText>
    <label>Old Marketing Consent Phone</label>
    <type>Checkbox</type>
</CustomField>