force-app/main/default/objects/Account/fields/Marketing_Consent_Post__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Consent to send marketing information by post</description>
    <inlineHelpText>Consent to send marketing information by post</inlineHelpText>
    <label>Old Marketing Consent Post</label>
    <type>Checkbox</type>
</CustomField>