force-app/main/default/objects/Account/fields/Marketing_Consent_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent_Post_Date__c</fullName>
    <description>The date that the Phone Consent was given</description>
    <inlineHelpText>The date that the Phone Consent was given</inlineHelpText>
    <label>Marketing Consent Post Date</label>
    <type>DateTime</type>
</CustomField>