force-app/main/default/objects/Account/fields/Marketing_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Opportunities__c</fullName>
    <description>Tourism field</description>
    <label>Partner Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>