force-app/main/default/objects/Account/fields/Marketing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tier__c</fullName>
    <label>Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Micro (under 50k)</fullName>
            </value>
            <value>
                <fullName>Mid (100-500k)</fullName>
            </value>
            <value>
                <fullName>Mass (500k+)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>