force-app/main/default/objects/Account/fields/MasterCustomerId__c.field-meta.xml
<CustomField>
    <fullName>MasterCustomerId__c</fullName>
    <description>Nullable Guid. indicates records that have been marked as duplicate and have another person record that is the actual master record.</description>
    <externalId>true</externalId>
    <label>MasterCustomerId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>