force-app/main/default/objects/Account/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Private Client also has Membership account, mark as TRUE</inlineHelpText>
    <label>Member?</label>
    <type>Checkbox</type>
</CustomField>