force-app/main/default/objects/Account/fields/Method_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Method_of_Payment__c</fullName>
    <label>Method of Payment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>