force-app/main/default/objects/Account/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <description>The VIP Guests middle name</description>
    <inlineHelpText>The VIP Guests middle name</inlineHelpText>
    <label>Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>