force-app/main/default/objects/Account/fields/Months_Since_Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>Months_Since_Last_Visit__c</fullName>
    <description>The number of months since the last visit record was checked-in.</description>
    <formula>IF(NOT(OR(ISBLANK(Last_Visit_Date_Time__c),ISNULL(Last_Visit_Date_Time__c))),
IF(
(IF(ABS(YEAR(TODAY())-YEAR(DATEVALUE(Last_Visit_Date_Time__c)))+ ABS(MONTH(TODAY()) -  MONTH(DATEVALUE(Last_Visit_Date_Time__c)))= 0,
0
,
IF(YEAR(TODAY()) = YEAR(DATEVALUE(Last_Visit_Date_Time__c)),
MONTH(TODAY())-MONTH(DATEVALUE(Last_Visit_Date_Time__c))+1
,

(YEAR(TODAY())-YEAR(DATEVALUE(Last_Visit_Date_Time__c))-1)*12+12-MONTH(DATEVALUE(Last_Visit_Date_Time__c))+1+MONTH(TODAY())
)- IF(DAY(TODAY())&lt;DAY(DATEVALUE(Last_Visit_Date_Time__c)),1,0)
)-1)&gt;0,

IF(ABS(YEAR(TODAY())-YEAR(DATEVALUE(Last_Visit_Date_Time__c)))+ ABS(MONTH(TODAY()) -  MONTH(DATEVALUE(Last_Visit_Date_Time__c)))= 0,
0
,
IF(YEAR(TODAY()) = YEAR(DATEVALUE(Last_Visit_Date_Time__c)),
MONTH(TODAY())-MONTH(DATEVALUE(Last_Visit_Date_Time__c))+1
,

(YEAR(TODAY())-YEAR(DATEVALUE(Last_Visit_Date_Time__c))-1)*12+12-MONTH(DATEVALUE(Last_Visit_Date_Time__c))+1+MONTH(TODAY())
)- IF(DAY(TODAY())&lt;DAY(DATEVALUE(Last_Visit_Date_Time__c)),1,0)
)-1,
0
), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of months since the last visit record was checked-in.</inlineHelpText>
    <label>Months Since Last Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>