force-app/main/default/objects/Account/fields/MRI_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>MRI_Parent_ID__c</fullName>
    <externalId>true</externalId>
    <label>MRI Parent ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>