force-app/main/default/objects/Account/fields/Name_of_Spouse__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Spouse__c</fullName>
    <description>The name of the guests spouse</description>
    <inlineHelpText>Name of the Private Clients spouse</inlineHelpText>
    <label>Name of Spouse</label>
    <length>100</length>
    <type>Text</type>
</CustomField>