force-app/main/default/objects/Account/fields/Net_Worth_Type__c.field-meta.xml
<CustomField>
    <fullName>Net_Worth_Type__c</fullName>
    <label>Net Worth Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High Net Worth</fullName>
            </value>
            <value>
                <fullName>Ultra High Net Worth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>