force-app/main/default/objects/Account/fields/No_Whitespace_Name__c.field-meta.xml
<CustomField>
    <fullName>No_Whitespace_Name__c</fullName>
    <description>Account name with all spaces removed. Used for Retail LIVE email tag searching.</description>
    <formula>SUBSTITUTE( Name , &apos; &apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Whitespace Name</label>
    <type>Text</type>
</CustomField>