force-app/main/default/objects/Account/fields/Old_Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Instance_Id__c</fullName>
    <description>Id of record migrated from old instance.</description>
    <label>Old Instance Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>