force-app/main/default/objects/Account/fields/Old_Instance_Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Instance_Parent_Id__c</fullName>
    <label>Old Instance Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>