force-app/main/default/objects/Account/fields/One_Time_Visitor__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Visitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automated field to show if Private Client has only visited a village once</description>
    <inlineHelpText>Automated field to show if Private Client has only visited a village once</inlineHelpText>
    <label>One-Time Visitor</label>
    <type>Checkbox</type>
</CustomField>