force-app/main/default/objects/Account/fields/PA_Name__c.field-meta.xml
<CustomField>
    <fullName>PA_Name__c</fullName>
    <description>The name of the Guests PA.</description>
    <inlineHelpText>The name of the Private Client’s PA</inlineHelpText>
    <label>Private Client’s PA name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>