force-app/main/default/objects/Account/fields/PA_Phone__c.field-meta.xml
<CustomField>
    <fullName>PA_Phone__c</fullName>
    <description>The phone number for the guests PA.</description>
    <inlineHelpText>The phone number of the Private Client’s PA</inlineHelpText>
    <label>PA Phone</label>
    <type>Phone</type>
</CustomField>