force-app/main/default/objects/Account/fields/PA_Security_Question__c.field-meta.xml
<CustomField>
    <fullName>PA_Security_Question__c</fullName>
    <label>Primary Contact Security Question</label>
    <length>100</length>
    <type>Text</type>
</CustomField>