force-app/main/default/objects/Account/fields/Partner_Category__c.field-meta.xml
<CustomField>
    <fullName>Partner_Category__c</fullName>
    <inlineHelpText>Choose the area your Partner primarily works in.</inlineHelpText>
    <label>Partner Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accomodation</fullName>
                <label>Accommodation</label>
            </value>
            <value>
                <fullName>Corporate Other</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
                <label>Mobility</label>
            </value>
            <value>
                <fullName>Travel Trade</fullName>
                <label>Travel</label>
            </value>
            <value>
                <fullName>Airline</fullName>
                <isActive>false</isActive>
                <label>Airline</label>
            </value>
            <value>
                <fullName>Associations/ Memberships</fullName>
                <isActive>false</isActive>
                <label>Associations/ Memberships</label>
            </value>
            <value>
                <fullName>Attractions</fullName>
                <isActive>false</isActive>
                <label>Attractions</label>
            </value>
            <value>
                <fullName>Education</fullName>
                <isActive>false</isActive>
                <label>Education</label>
            </value>
            <value>
                <fullName>Guest Agencies</fullName>
                <isActive>false</isActive>
                <label>Guest Agencies</label>
            </value>
            <value>
                <fullName>System/ Test accounts</fullName>
                <isActive>false</isActive>
                <label>System/ Test accounts</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>