force-app/main/default/objects/Account/fields/Partner_Detail__c.field-meta.xml
<CustomField>
    <fullName>Partner_Detail__c</fullName>
    <label>Partner Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_Sub_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4_5</fullName>
                <label>4* &amp; 5*</label>
            </value>
            <value>
                <fullName>Car Hire</fullName>
            </value>
            <value>
                <fullName>Chauffeur Services</fullName>
            </value>
            <value>
                <fullName>College</fullName>
            </value>
            <value>
                <fullName>Corporate Travel</fullName>
            </value>
            <value>
                <fullName>Cultural</fullName>
            </value>
            <value>
                <fullName>Direct Agent Sales</fullName>
            </value>
            <value>
                <fullName>Embassy/ Diplomatic</fullName>
            </value>
            <value>
                <fullName>Employee Benefits</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>HNW</fullName>
            </value>
            <value>
                <fullName>HNW (Orient Express)</fullName>
            </value>
            <value>
                <fullName>Leisure</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Mass: More than 500K</fullName>
            </value>
            <value>
                <fullName>Mice/ Corporate</fullName>
            </value>
            <value>
                <fullName>Micro: Under 50K</fullName>
            </value>
            <value>
                <fullName>Mid: 100K to 500K</fullName>
            </value>
            <value>
                <fullName>Ministeries</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>OTA</fullName>
            </value>
            <value>
                <fullName>Other (3*, 2* &amp; 1*)</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Social/sports</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>4* &amp; 5*</fullName>
                <isActive>false</isActive>
                <label>4* &amp; 5* (deprecated)</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <isActive>false</isActive>
                <label>PR</label>
            </value>
            <value>
                <fullName>Publisher</fullName>
                <isActive>false</isActive>
                <label>Publisher</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>