force-app/main/default/objects/Account/fields/Partner_Program_Membership_1__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Membership_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Partner that is responsible for the initial signup of the Private Client.</inlineHelpText>
    <label>Partner Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Partner Program Membership 1)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>