force-app/main/default/objects/Account/fields/Partner_Program_Membership_2__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Membership_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Program Membership 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Partner Program Membership 2)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>