force-app/main/default/objects/Account/fields/Partner_Program_Membership_3__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program_Membership_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Program Membership 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Partner Program Membership 3)</relationshipLabel>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>