force-app/main/default/objects/Account/fields/Partner_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Partner_Sub_Category__c</fullName>
    <inlineHelpText>Associations = Tourism Boards, Chamber of Commerce, Professional. Memberships = Private clubs, Sports Clubs, Other = Music &amp; Film, Talent Agency, Media, Beauty, Auction house, Real  Estate.</inlineHelpText>
    <label>Partner Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Partner_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Apartment/ Self-Catering</fullName>
            </value>
            <value>
                <fullName>Associations</fullName>
            </value>
            <value>
                <fullName>Attractions</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>B&amp;B</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Buyers</fullName>
            </value>
            <value>
                <fullName>Car Services</fullName>
            </value>
            <value>
                <fullName>Chamber of Commerce</fullName>
            </value>
            <value>
                <fullName>Concierge</fullName>
            </value>
            <value>
                <fullName>Concierge/ HNW</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Corporate Offline Travel Agent</fullName>
            </value>
            <value>
                <fullName>Digital Travel Platform</fullName>
            </value>
            <value>
                <fullName>Diplomatic</fullName>
            </value>
            <value>
                <fullName>DMC - Destination Mangement Company</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Employee Benefits Platform</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>European</fullName>
            </value>
            <value>
                <fullName>Funding Program</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Heritage</fullName>
            </value>
            <value>
                <fullName>Hostel</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Influencer/Blogger</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>