force-app/main/default/objects/Account/fields/Permission_to_hold_data__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_hold_data__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the guest grant permission for us to hold their data?</description>
    <inlineHelpText>Consent given to process Private Client&apos;s data</inlineHelpText>
    <label>Consent to Process Data Given</label>
    <type>Checkbox</type>
</CustomField>