force-app/main/default/objects/Account/fields/Personal_Shopper__c.field-meta.xml
<CustomField>
    <fullName>Personal_Shopper__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Enter name of the Personal Shopper that resulted in this VIP Account being created.</inlineHelpText>
    <label>Personal Shopper</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile_Name__c</field>
            <operation>equals</operation>
            <value>Personal Shopper for Clientelling App</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_Personal_Shopper</relationshipName>
    <type>Lookup</type>
</CustomField>