force-app/main/default/objects/Account/fields/Personal_Shopping_Client__c.field-meta.xml
<CustomField>
    <fullName>Personal_Shopping_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Personal Shopping Client</label>
    <type>Checkbox</type>
</CustomField>