force-app/main/default/objects/Account/fields/Personal_Shopping_engagements__c.field-meta.xml
<CustomField>
    <fullName>Personal_Shopping_engagements__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Field shows the number of Personal shopping visits for the Guest</inlineHelpText>
    <label>Personal Shopping engagements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>