force-app/main/default/objects/Account/fields/Pet_Name__c.field-meta.xml
<CustomField>
    <fullName>Pet_Name__c</fullName>
    <inlineHelpText>The name(s) of the pet(s) owned by the Private Client</inlineHelpText>
    <label>Pets Name/s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>