force-app/main/default/objects/Account/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <inlineHelpText>This is a secondary phone number for the company. Please use standard format 
[+][country code][subscriber number including area code] 
e.g. +44 20 7183 8750</inlineHelpText>
    <label>Phone (2)</label>
    <type>Phone</type>
</CustomField>