force-app/main/default/objects/Account/fields/PI_Profile_Image__c.field-meta.xml
<CustomField>
    <fullName>PI_Profile_Image__c</fullName>
    <formula>&apos;https://valueretail--prxc.eu41.visual.force.com/apex/avatar?w=200&amp;h=200&amp;col=336699&amp;text=&apos; &amp; upper(left(FirstName,1) &amp; left(LastName,1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PI Profile Image</label>
    <type>Text</type>
</CustomField>