force-app/main/default/objects/Account/fields/Pop_Up_Interest__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_Interest__c</fullName>
    <inlineHelpText>Select if the Brand is interested in having a pop-up in one or more village</inlineHelpText>
    <label>Pop-Up Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>