force-app/main/default/objects/Account/fields/Pop_Up_Interest_Comment__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_Interest_Comment__c</fullName>
    <inlineHelpText>Enter any comments related to the Brands interest in pop-up&apos;s</inlineHelpText>
    <label>Pop-Up Interest Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>