force-app/main/default/objects/Account/fields/Pop_Up_Village_Interest__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_Village_Interest__c</fullName>
    <inlineHelpText>Select one of more village that the Brand is interested in having a pop up located</inlineHelpText>
    <label>Pop-Up Village Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Village</valueSetName>
    </valueSet>
</CustomField>