force-app/main/default/objects/Account/fields/Preferred_method_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Preferred_method_of_contact__c</fullName>
    <description>How would the guest prefer to be contacted</description>
    <inlineHelpText>Private Clients preference for contact</inlineHelpText>
    <label>Preferred method of contact</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
                <isActive>false</isActive>
                <label>Facebook</label>
            </value>
            <value>
                <fullName>Instagram</fullName>
                <isActive>false</isActive>
                <label>Instagram</label>
            </value>
            <value>
                <fullName>Other Social</fullName>
                <isActive>false</isActive>
                <label>Other Social</label>
            </value>
            <value>
                <fullName>Snapchat</fullName>
                <isActive>false</isActive>
                <label>Snapchat</label>
            </value>
            <value>
                <fullName>Twitter</fullName>
                <isActive>false</isActive>
                <label>Twitter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>